--- a/client/containers/Pub/PubDocument/pubBody.scss
+++ b/client/containers/Pub/PubDocument/pubBody.scss
@@ -98,14 +98,13 @@ $pub-body-font-size: if-is-export(14px, 20px);
 			font-size: 0.8em;
 			& > * {
 				// Relative to above (0.8 * 1.25 = 1)
-				font-size: 1.25em
+				font-size: 1.25em;
 			}
 		}
 	}
 
 	ul,
 	ol {
-		padding-left: 1em;
 		margin: 0em 0em 1em;
 		ul,
 		ol {
